k8s/k8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: detai2maven

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: detai2maven-deployment
  namespace: detai2maven
spec:
  replicas: 5
  selector:
    matchLabels:
      app: detai2maven
  template:
    metadata:
      labels:
        app: detai2maven
    spec:
      containers:
        - name: detai2maven
          image: caothanhduc/detai2maven:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: detai2maven-service
  namespace: detai2maven
spec:
  selector:
    app: detai2maven
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: detai2maven-ingress
  namespace: detai2maven
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: detai2maven.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: detai2maven-service
                port:
                  number: 80
